--- a/Angular/A1/angularUno/src/app/login/login.component.html
+++ b/Angular/A1/angularUno/src/app/login/login.component.html
@@ -5,19 +5,20 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
 
-<div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon1">@</span>
-  <input type="text" class="form-control" placeholder="Escriba aqui su email" aria-label="Email" aria-describedby="basic-addon1">
-  <span class="input-group-text" id="basic-addon2">Tu direccion de correo @ ejemplo.com</span>
+<div class="container">
+  <div class="row vh-100 justify-content-center align-items-center">
+    <div class="col-auto bg-light p-5">
+      <form action="" method="get">
+        <H1>Inicia sesión</H1>
+        <div class="input-group p-2">
+          <input type="text" class="form-control" placeholder="Email">
+        </div>
+        <div class="input-group p-2">
+          <input type="text" class="form-control" placeholder="Password">
+        </div>
+        <input type="button" class="btn btn-success w-100" value="Login">
+      </form>
+    </div>
+  </div>
 </div>
-<div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon1">@</span>
-  <input type="text" class="form-control" placeholder="escriba aqui su contraseña" aria-label="Confirmea aqui su email" aria-describedby="basic-addon2">
-  <span class="input-group-text" id="basic-addon2"></span>
-</div>
-<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
-data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Enviar</button>
 
-
-
-<br>
