--- a/Angular/A1/angularUno/src/app/register/register.component.html
+++ b/Angular/A1/angularUno/src/app/register/register.component.html
@@ -9,89 +9,31 @@
 <div class="container-fluid">
 
 
-
-
-<div class="row">
-  <div class="col-12 col-md-12"><br><i><h2>Registro Angular.</h2></i><br></div>
-</div>
-<hr>
-
-  <div class="row">
-    <div class="col">
-        <div class="input-group">
-          <span class="input-group-text">Primer nombre</span>
-          <input type="text" aria-label="First name" class="form-control">
-        </div>
-    </div>
-    <div class="col">
-      <div class="input-group">
-          <span class="input-group-text">Segundo nombre</span>
-          <input type="text" aria-label="First name" class="form-control">
-        </div>
-    </div>
-  </div>
-
-  <br>
-
-  <div class="row">
-    <div class="col">
-        <div class="input-group">
-          <span class="input-group-text">Primer Apellido</span>
-          <input type="text" aria-label="First name" class="form-control">
-        </div>
-    </div>
-    <div class="col">
-      <div class="input-group">
-          <span class="input-group-text">Segundo Apellido</span>
-          <input type="text" aria-label="First name" class="form-control">
-        </div>
+  <div class="container">
+    <div class="row vh-100 justify-content-center align-items-center">
+      <div class="col-auto bg-light p-5">
+        <form action="" method="post">
+          <h1>Registro</h1>
+          <div class="input-group p-2">
+            <input type="text" class="form-control" placeholder="Primer Nombre">
+          </div>
+          <div class="input-group p-2">
+            <input type="text" class="form-control" placeholder="Segundo Nombre">
+          </div>
+          <div class="input-group p-2">
+            <input type="text" class="form-control" placeholder="Email">
+          </div>
+          <div class="input-group p-2">
+            <input type="text" class="form-control" placeholder="Contraseña">
+          </div>
+        
+          <button type="submit" class="form-submit" value="create-account">
+            Crear cuenta
+          </button>
+        </form>
+      </div>
     </div>
   </div>
-
-  <br>
-
-
-  <div class="input-group mb-3">
-    <span class="input-group-text" id="basic-addon1">@</span>
-    <input type="text" class="form-control" placeholder="Escriba aqui su email" aria-label="Email" aria-describedby="basic-addon1">
-    <span class="input-group-text" id="basic-addon2">Tu direccion de correo @ ejemplo.com</span>
-  </div>
-
-  <div class="input-group mb-3">
-    <span class="input-group-text" id="basic-addon1">@</span>
-    <input type="text" class="form-control" placeholder="Confirme aqui su email" aria-label="Email" aria-describedby="basic-addon1">
-    <span class="input-group-text" id="basic-addon2">Tu direccion de correo @ ejemplo.com</span>
-  </div>
-
-  <div class="input-group mb-3">
-    <span class="input-group-text" id="basic-addon1">@</span>
-    <input type="text" class="form-control" placeholder="escriba aqui su contraseña" aria-label="Confirmea aqui su email" aria-describedby="basic-addon2">
-    <span class="input-group-text" id="basic-addon2"></span>
-  </div>
-
-
-    <br>
-
-
-  </div>
-
-  <br>
-
-
-
-
-<div class="row">
-  <div class="col-12 col-md-12"><br><i><h2> Tienes una cuenta?</h2></i><br></div>
-</div>
-
-
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Enviar</button>
-
-
-
-    <br>
-
 
 
 
