--- a/Angular/A1/angularUno/src/app/login/login.component.html
+++ b/Angular/A1/angularUno/src/app/login/login.component.html
@@ -5,19 +5,24 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
 
+    <a name="log" id="log"></a>
+
 <div class="container">
   <div class="row vh-100 justify-content-center align-items-center">
     <div class="col-auto bg-light p-5">
       <form action="" method="get">
         <H1>Inicia sesión</H1>
         <div class="input-group p-2">
-          <input type="text" class="form-control" placeholder="Email">
+          <input type="email" class="form-control" placeholder="Email" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
         </div>
         <div class="input-group p-2">
-          <input type="text" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" required>
         </div>
-        <input type="button" class="btn btn-success w-100" value="Login">
+        <br>
+        <input type="submit" onclick="" class="btn btn-success w-100" value="Login">
       </form>
+      <br>
+      <div>¿No estás registrado? <a href="#mov">¡Registrate ahora!</a></div>
     </div>
   </div>
 </div>
