--- a/Angular/A1/angularUno/src/app/register/register.component.html
+++ b/Angular/A1/angularUno/src/app/register/register.component.html
@@ -8,29 +8,30 @@
 
 <div class="container-fluid">
 
-
+<a name="mov" id="mov"></a>
   <div class="container">
     <div class="row vh-100 justify-content-center align-items-center">
       <div class="col-auto bg-light p-5">
-        <form action="" method="post">
+        <form action="">
           <h1>Registro</h1>
           <div class="input-group p-2">
-            <input type="text" class="form-control" placeholder="Primer Nombre">
+            <input type="text" class="form-control" placeholder="Primer Nombre" required>
           </div>
           <div class="input-group p-2">
             <input type="text" class="form-control" placeholder="Segundo Nombre">
           </div>
           <div class="input-group p-2">
-            <input type="text" class="form-control" placeholder="Email">
+            <input type="email" class="form-control" placeholder="Email" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
           </div>
           <div class="input-group p-2">
-            <input type="text" class="form-control" placeholder="Contraseña">
+            <input type="password" class="form-control" placeholder="Contraseña" required>
           </div>
-        
-          <button type="submit" class="form-submit" value="create-account">
-            Crear cuenta
-          </button>
+          <br>
+
+          <input type="submit" onclick="" class="btn btn-success w-100" value="Registrate">
         </form>
+        <br>
+        <div>¿Tienes cuenta ya? <a href="#log">¡Pincha aquí para iniciar sesión!</a></div>
       </div>
     </div>
   </div>
