--- a/Angular/A2/src/app/recordarcontra/recordarcontra.component.html
+++ b/Angular/A2/src/app/recordarcontra/recordarcontra.component.html
@@ -16,7 +16,7 @@
           <input type="email" class="form-control" placeholder="Email" pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" required>
         </div>
         <br>
-        <input type="submit" onclick="" class="btn btn-success w-100" value="Recuperar Contraseña">
+        <input type="submit" onclick="" class="btn btn-success w-100" [routerLink]="['/loginPage']"value="Recuperar Contraseña">
       </form>
       <br>
     </div>
