--- a/Angular/A2/src/app/register/register.component.html
+++ b/Angular/A2/src/app/register/register.component.html
@@ -28,10 +28,9 @@
           </div>
           <br>
 
-          <input type="submit" onclick="" class="btn btn-success w-100" value="Registrate">
+          <input type="submit" [routerLink]="['/verifyPage']" onclick="" class="btn btn-success w-100" value="Terminar registro">
         </form>
         <br>
-        <div>¿Tienes cuenta ya? <a href="#log">¡Pincha aquí para iniciar sesión!</a></div>
       </div>
     </div>
   </div>
