--- a/Angular/A2/src/app/verificarcuenta/verificarcuenta.component.html
+++ b/Angular/A2/src/app/verificarcuenta/verificarcuenta.component.html
@@ -1,1 +1,24 @@
-<p>verificarcuenta works!</p>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+
+
+<div class="container-fluid">
+
+<a name="mov" id="mov"></a>
+  <div class="container">
+    <div class="row vh-100 justify-content-center align-items-center">
+      <div class="col-auto bg-light p-5">
+        <form action="">
+          <h2>Pulse el siguiente botón para verificar que efectivamente no eres un robot y terminar su registro</h2>
+          <br><br>
+
+          <input type="submit" [routerLink]="['/loginPage']" onclick="" class="btn btn-success w-100" value="Verificate">
+        </form>
+        <br>
+      </div>
+    </div>
+  </div>
