--- a/Angular/A3/src/app/Components/elinicio/elinicio.component.html
+++ b/Angular/A3/src/app/Components/elinicio/elinicio.component.html
@@ -3,10 +3,8 @@
 <input type="submit" [routerLink]="['/loginPage']" onclick="" class="btn btn-success w-100" value="Volver a inicio de sesión">
 <br>
 <br>
-<label for="pokemons">Elige un tipo:</label>
-
 <select name="pokemons" id="pokemons">
   <option value="hierba">hierba</option>
-  <option value="fuego">fuego</option>
+  <option value="fuego" selected>fuego</option>
   <option value="agua">agua</option>
 </select>
