--- a/Angular/A3/src/app/Components/elinicio/elinicio.component.html
+++ b/Angular/A3/src/app/Components/elinicio/elinicio.component.html
@@ -11,7 +11,7 @@
 <br>
 <table>
   <br>
-  <h1>Los pokemons</h1>
+  <h1>Los pokAmIons</h1>
   <tr *ngFor="let index of items">
     <td>
       {{index.pokemon.name}}
