--- a/Angular/A3/src/app/Components/elinicio/elinicio.component.html
+++ b/Angular/A3/src/app/Components/elinicio/elinicio.component.html
@@ -18,7 +18,7 @@
             
   </td>
   <td>
-    {{index.pokemon.url}}
+    <a href="{{index.pokemon.url}}">{{index.pokemon.url}}</a>
   </td>
     </tr>
 </table>
